--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
+    "@types/lodash.debounce": "^4.0.9",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
     "expo-image": "~2.4.0",
     "expo-status-bar": "~2.2.3",
     "expo-video": "~2.2.2",
+    "lodash.debounce": "^4.0.8",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
