--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
