--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
-    "@shopify/flash-list": "^2.0.0",
+    "@shopify/flash-list": "^2.0.1",
     "@types/lodash.debounce": "^4.0.9",
+    "dotenv": "^16.4.5",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
     "expo-image": "~2.4.0",
@@ -26,8 +27,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "tslib": "^2.8.1",
-    "dotenv": "^16.4.5"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
